fixed shading overlay height issues in css
in style.css, there is an overlay over the background that provides the
dark “tint” over the background image. previously, the height was set
to 750px. this was not responsive and did not scale properly to bigger
viewport windows. the fix auto-sets height

--- a/css/mytype.css
+++ b/css/mytype.css
@@ -6,9 +6,9 @@ h1 {
 
 /* Disable Scrolling */
 body {
-      position: fixed; 
+/*      position: fixed; 
       overflow-y: scroll;
-      width: 100%;
+      width: 100%;*/
 }
 
 .lead {
