--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,11 @@ font-weight: 900;
 	}
 /* Home Style */
 #tf-home{
-	background: url(../img/01.jpg);
+	background: url(../img/01.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
 	background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
 	color: #cfcfcf;
 }
 
@@ -133,8 +133,13 @@ font-weight: 900;
 	background: -ms-linear-gradient(top,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#66000000',GradientType=0 ); /* IE6-9 */
-	height: 750px;
 	background-attachment: fixed;
+
+	/* old hacky fix for height */
+/*	height: 1500px;
+*/	
+	height: 100vh;
+
 }
 #tf-home p.lead{
 	color: #e3e3e3;
@@ -143,6 +148,8 @@ font-weight: 900;
 .content{
 	position: relative;
 	padding: 20% 0 0;
+	text-align: center; /* Centered text/links */
+
 }
 
 .color{
